library/pod-security-policy/proc-mount/samples/psp-proc-mount/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPProcMount
metadata:
  name: psp-proc-mount
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    procMount: Default
  enforcementAction: dryrun
