library/pod-security-policy/proc-mount/samples/psp-proc-mount/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-proc-mount-disallowed
  namespace: default
  labels:
    app: nginx-proc-mount
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      procMount: Default
