library/pod-security-policy/proc-mount/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: proc-mount
tests:
- name: default-proc-mount-required
  template: template.yaml
  constraint: samples/psp-proc-mount/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/psp-proc-mount/example_disallowed.yaml
    assertions:
    - violations: yes
  - name: example-allowed
    object: samples/psp-proc-mount/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed-ephemeral
    object: samples/psp-proc-mount/example_disallowed_ephemeral.yaml
    assertions:
    - violations: yes
